--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ nav a{
     margin-top:25px;
     padding:12px 30px;
     border-radius:30px;
-    background:#1b3a2f;
+    background-color: blueviolet;
+    /* background:#1b3a2f; */
     color:white;
     text-decoration:none;
     font-weight:500;
